# opencv-dnn-demo

./: CMakeLists.txt  README.md
scripts/: download_data.ps1
src/: CMakeLists.txt  example_googlenet.cpp  example_mobilenet.cpp
